--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 						<a href="#"><i class="fab fa-twitter"></i></a>
 					</div>
 				</div>
-				<p class="attribution pt-4">&copy; copyright Adventura Dulcemio wines 2022. Built by <a href="#">Digital Hub</a></p>
+				<p class="attribution pt-4">&copy; copyright Adventura Dulcemio wines 2022. Built by <a href="https://digitalhubwebsolutions.netlify.app/index.html">Digital Hub</a></p>
 			</footer>
 		</main>
 			
