submit button added

--- a/index.html
+++ b/index.html
@@ -262,11 +262,11 @@
 						<form action="#" netlify>
 							<div class="form-item">
 								<label for="name">Your name</label>
-								<input type="text" placeholder="name..." class="form-control">
+								<input type="text" placeholder="name..." class="form-control" required>
 							</div>
 							<div class="form-item">
 								<label for="email">Your email</label>
-								<input type="email" placeholder="email..." class="form-control">
+								<input type="email" placeholder="email..." class="form-control" required>
 							</div>
 							<div class="form-item">
 								<label for="subject">Subject(optional)</label>
@@ -274,8 +274,10 @@
 							</div>
 							<div>
 								<label for="message">Message</label>
-								<textarea name="" id="" cols="10" rows="5" placeholder="Your message" class="form-control"></textarea>
+								<textarea name="" id="" cols="10" rows="5" placeholder="Your message" class="form-control" required></textarea>
 							</div>
+
+							<button type="submit" class="submit-btn">Submit </button>
 						</form>
 					</div>
 				</div>
