--- a/products/product1.html
+++ b/products/product1.html
@@ -19,7 +19,7 @@
 		<header>
 			<div class="topnav fixed-top shadow-sm" id="myTopnav">
 				<div class="nav-logo">
-					<a href="#" class="navbar-brand"><img src="/images/logo.png" alt="logo" height="70px" width="70px"></a>
+					<a href="/index.html" class="navbar-brand"><img src="/images/logo.png" alt="logo" height="70px" width="70px"></a>
 				</div>
 				<div class="overlay-wrapper">
 					<div class="overlay" id="myNav">
