--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
 				<div class="contact-wrapper">
 					<div class="contact-info">
 						<div class="contact-info-wrapper shadow-sm">
-							<div class="email contact-item">
+							<div class="email contact-item pb-3">
 								<div class="contact-title">
 									<i class="fas fa-envelope"></i>
 									<h5>Email</h5>
 								</div>
 								<p>adventuradulcemio@gmail.com</p>
 							</div>
-							<div class="phone contact-item">
+							<div class="phone contact-item pb-3">
 								<div class="contact-title">
 									<i class="fas fa-phone"></i>
 									<h5>Phone</h5>
@@ -241,14 +241,14 @@
 									<p>08012345678</p>
 								</div>
 							</div>
-							<div class="address contact-item">
+							<div class="address contact-item pb-3">
 								<div class="contact-title">
 									<i class="fas fa-map-marker-alt"></i>
 									<h5>Address</h5>
 								</div>
 								<p>No 120 lungi multipurpose market, maitama, abuja.</p>
 							</div>
-							<div class="socials contact-item">
+							<div class="socials contact-item pb-3">
 								<h5 class="">Connect</h5>
 								<a href="#"><i class="fab fa-facebook"></i></a>
 								<a href="#"><i class="fab fa-instagram"></i></a>
