--- a/index.html
+++ b/index.html
@@ -262,19 +262,19 @@
 						<form action="#" netlify>
 							<div class="form-item">
 								<label for="name">Your name</label>
-								<input type="text" placeholder="name..." class="form-control" required>
+								<input type="text" placeholder="name..." class="form-control" name="name" id="name" required>
 							</div>
 							<div class="form-item">
 								<label for="email">Your email</label>
-								<input type="email" placeholder="email..." class="form-control" required>
+								<input type="email" placeholder="email..." class="form-control" name="email" id="email" required>
 							</div>
 							<div class="form-item">
 								<label for="subject">Subject(optional)</label>
-								<input type="text" placeholder="subject..." class="form-control">
+								<input type="text" placeholder="subject..." class="form-control" name="subject" id="subject">
 							</div>
 							<div>
 								<label for="message">Message</label>
-								<textarea name="" id="" cols="10" rows="5" placeholder="Your message" class="form-control" required></textarea>
+								<textarea name="" id="" cols="10" rows="5" placeholder="Your message" class="form-control" name="message" id="message" required></textarea>
 							</div>
 
 							<button type="submit" class="submit-btn">Submit </button>
