--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
 						<h4></h4>
 						<form action="#" netlify>
 							<div class="form-item">
-								<label for="name">Your name</label>
+								<label for="name">Your name:</label>
 								<input type="text" placeholder="name..." class="form-control" name="name" id="name" required>
 							</div>
 							<div class="form-item">
-								<label for="email">Your email</label>
+								<label for="email">Your email:</label>
 								<input type="email" placeholder="email..." class="form-control" name="email" id="email" required>
 							</div>
 							<div class="form-item">
@@ -274,7 +274,7 @@
 							</div>
 							<div>
 								<label for="message">Message</label>
-								<textarea name="" id="" cols="10" rows="5" placeholder="Your message" class="form-control" name="message" id="message" required></textarea>
+								<textarea class="form-control" name="message" id="message" cols="10" rows="5" placeholder="Your message"   required></textarea>
 							</div>
 
 							<button type="submit" class="submit-btn">Submit </button>
